# memepool

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  sample.env  system_prompt.txt
core/: agent.py  plugin.py  tools.py
plugins/coingecko/: plugin.py
plugins/cowswap/: constants.py  plugin.py
plugins/fear_and_greed_index/: plugin.py
plugins/ledger/: plugin.py
plugins/reddit/: plugin.py
plugins/twitter/: plugin.py
scripts/: test_swap.py  test_twitter.py
