[project]
name = "memepool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.4",
    "praw>=7.8.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.5",
    "web3>=7.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]
